--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "classies": "^1.0.5",
-    "mithril": "2.2.2"
+    "mithril": "2.2.2",
+    "vyce": "^0.7.0"
   },
   "devDependencies": {
     "env-smart": "^2.3.0",
