remove vyce dependency

--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   },
   "dependencies": {
     "classies": "^1.0.5",
-    "mithril": "2.2.2",
-    "vyce": "0.8.4"
+    "mithril": "2.2.2"
   },
   "devDependencies": {
     "env-smart": "^2.3.0",
