--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
       - name: run
         run: |
           npm install -g pnpm
-          pnpm install --prod --no-optional
+          pnpm install --no-optional
           pnpm run build
       - name: deploy
         uses: JamesIves/github-pages-deploy-action@4.1.5
