--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "type": "module",
   "scripts": {
-    "dev": "node scripts/build.js --dev",
-    "build": "node scripts/build.js"
+    "dev": "node build.js --dev",
+    "build": "node build.js"
   },
   "engines": {
     "node": "18.x",
