--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           npm install -g pnpm
           pnpm install --no-optional
-          API_URL=$API_URL pnpm run build
+          pnpm run build
       - name: deploy
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
