--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,9 +20,10 @@ jobs:
           pnpm install --prod
           pnpm run build
       - name: deploy
-        uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
-          single-commit: true
-          git-config-email: <>
-          branch: gh-pages
-          folder: dist
+          env:
+            SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
+            SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
+        run: |
+          pnpm install -g surge
+          surge ./dist/ sfn.surge.sh
