--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,17 +14,20 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v2
-        with:
-          version: 8
       - uses: actions/setup-node@v3
         with:
           node-version: 18.15.0
           cache: 'pnpm'
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - name: install and build
         run: |
           pnpm install --prod
           pnpm run build
+      - uses: denoland/setup-deno@v1
+        with:
+          deno-version: 1.36.1
       - name: deploy
         run: |
           # install deployctl
